# Robotics-Class

ex1_publisher_subscriber/publisher_subscriber/: CMakeLists.txt  Readme.md  package.xml
ex1_publisher_subscriber/publisher_subscriber/src/: publisher.cpp  subscriber.cpp
ex1_publisher_subscriber/publisher_subscriber_msgs/: CMakeLists.txt  Readme.md  package.xml
ex1_publisher_subscriber/publisher_subscriber_msgs/msg/: JointPositions.msg
ex2_transforms/comau_description/: CMakeLists.txt  package.xml
ex2_transforms/comau_description/meshes/visual/: base_link.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae
ex2_transforms/comau_description/robot/: smartsix.xacro
ex2_transforms/smartsix_moveit_config/: .setup_assistant  package.xml
ex2_transforms/smartsix_moveit_config/config/: ros_controllers.yaml  smartsix.srdf
ex2_transforms/smartsix_moveit_config/launch/: demo.launch  demo_gazebo.launch  moveit.rviz  ros_controllers.launch
ex2_transforms/tf_parser/: package.xml
ex2_transforms/tf_parser/scripts/: comau_smartsix_fk.m
ex2_transforms/tf_parser/src/: tf_parser.cpp
ex3_kinematics/kinematics_action/: package.xml
ex3_kinematics/kinematics_action/launch/: ik_solver.launch
ex3_kinematics/kinematics_action_msgs/: CMakeLists.txt  package.xml
ex3_kinematics/kinematics_service/: CMakeLists.txt  package.xml
ex3_kinematics/kinematics_service_msgs/: CMakeLists.txt  package.xml
ex4_planning/: demo_generate_yz_circular_path.m
ex4_planning/unisa_trajectory_planner/: CMakeLists.txt  Readme.md  package.xml
(+16 files in other folders)
